internal/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  clusterIP: None
  selector:
    app: metabase
  ports:
    - port: 3000
